# scoreboard-clock-radio-common-nrf24

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/: espnow_link.h  radio_common.h  radio_config.h
src/: radio_common.c
